[workspace]
members = [
    ".", "rust-cuda-derive", "rust-cuda-kernel",
    "examples/derive", "examples/print", "examples/single-source",
]
default-members = [
    ".", "rust-cuda-derive", "rust-cuda-kernel",
]

[package]
name = "rust-cuda"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81" # nightly

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["dep:rustacuda_derive", "dep:rust-cuda-derive"]
device = []
final = ["dep:final"]
host = ["dep:rustacuda", "dep:regex", "dep:oneshot", "dep:safer_owning_ref"]
kernel = ["dep:rust-cuda-kernel"]

[dependencies]
const-type-layout = { version = "0.3.2", default-features = false, features = ["derive"] }
final = { version = "0.1.1", default-features = false, optional = true }
oneshot = { version = "0.1", default-features = false, features = ["std", "async"], optional = true }
regex = { version = "1.10", default-features = false, optional = true }
rustacuda = { git = "https://github.com/juntyr/RustaCUDA", rev = "c6ea7cc", default-features = false, optional = true }
rustacuda_core = { git = "https://github.com/juntyr/RustaCUDA", rev = "c6ea7cc", default-features = false }
rustacuda_derive = { git = "https://github.com/juntyr/RustaCUDA", rev = "c6ea7cc", default-features = false, optional = true }
safer_owning_ref = { version = "0.5", default-features = false, optional = true }

rust-cuda-derive = { path = "rust-cuda-derive", default-features = false, optional = true }
rust-cuda-kernel = { path = "rust-cuda-kernel", default-features = false, optional = true }
