[workspace]
members = [
    ".", "rust-cuda-derive", "rust-cuda-kernel",
    "examples/derive", "examples/print", "examples/single-source",
]
default-members = [
    ".", "rust-cuda-derive", "rust-cuda-kernel",
]

[package]
name = "rust-cuda"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81" # nightly

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["dep:cust_derive", "dep:rust-cuda-derive"]
device = []
final = ["dep:final"]
host = ["dep:cust", "dep:regex", "dep:oneshot", "dep:safer_owning_ref"]
kernel = ["dep:rust-cuda-kernel"]

[dependencies]
const-type-layout = { version = "0.3.2", default-features = false, features = ["derive"] }
# FIXME: cust fails to compile without the `bytemuck` feature
cust = { version = "0.3.2", default-features = false, features = ["bytemuck"], optional = true }
cust_core = { version = "0.1", default-features = false }
cust_derive = { version = "0.2", default-features = false, optional = true }
final = { version = "0.1.1", default-features = false, optional = true }
oneshot = { version = "0.1", default-features = false, features = ["std", "async"], optional = true }
regex = { version = "1.10", default-features = false, optional = true }
safer_owning_ref = { version = "0.5", default-features = false, optional = true }

rust-cuda-derive = { path = "rust-cuda-derive", default-features = false, optional = true }
rust-cuda-kernel = { path = "rust-cuda-kernel", default-features = false, optional = true }
