[package]
name = "rust-cuda-derive"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.79" # nightly

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
