[package]
name = "rust-cuda-derive"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81" # nightly

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
proc-macro-error2 = { version = "2.0", default-features = false, features = ["syn-error"] }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "fold"] }
