[package]
name = "rust-cuda-derive"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-error2 = { workspace = true, features = ["syn-error"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "fold"] }

[lints]
workspace = true
