[package]
name = "rust-cuda-kernel"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81" # nightly
links = "libnvptxcompiler_static"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cargo_metadata = { version = "0.18", default-features = false, features = ["builder"] }
colored = { version = "2.0", default-features = false }
lazy_static = { version = "1.4", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
proc-macro-error2 = { version = "2.0", default-features = false }
ptx-builder = { git = "https://github.com/juntyr/rust-ptx-builder", rev = "9649e58", default-features = false }
quote = { version = "1.0", default-features = false }
regex = { version = "1.5", default-features = false }
seahash = { version = "4.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
strip-ansi-escapes = { version = "0.2", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "fold"] }
thiserror = { version = "1.0", default-features = false }

[build-dependencies]
find_cuda_helper = { version = "0.2", default-features = false }
