[package]
name = "rust-cuda-kernel"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
links = "libnvptxcompiler_static"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cargo_metadata = { workspace = true, features = ["builder"] }
cargo-util = { workspace = true }
colored = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error2 = { workspace = true }
quote = { workspace = true }
scratch = { workspace = true }
seahash = { workspace = true }
serde_json = { workspace = true }
strip-ansi-escapes = { workspace = true }
syn = { workspace = true, features = ["full", "fold"] }
thiserror = { workspace = true }

[build-dependencies]
find_cuda_helper = { workspace = true }

[lints]
workspace = true
