[package]
name = "rust-cuda-ptx-jit"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
host = ["regex", "rustacuda", "lazy_static"]

[dependencies]
rustacuda = { version = "0.1.3", optional = true }
regex = { version = "1.5.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
