[package]
name = "rust-cuda-ptx-jit"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
host = ["regex", "rustacuda", "lazy_static"]

[dependencies]
rustacuda = { git = "https://github.com/juntyr/RustaCUDA", rev = "c6ea7cc", optional = true }
regex = { version = "1.5", optional = true }
lazy_static = { version = "1.4", optional = true }
