[package]
name = "derive"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.langenstein@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-type-layout = { version = "0.2.0" }
rc = { package = "rust-cuda", path = "../../", features = ["derive", "host"] }
