[package]
name = "print"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "cuda")'.dependencies]
rust-cuda = { path = "../../", features = ["kernel", "device"] }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rust-cuda = { path = "../../", features = ["kernel", "host"] }
