[package]
name = "single-source"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-type-layout = { git = "https://github.com/MomoLangenstein/const-type-layout", rev = "ee9cc14" }

[target.'cfg(target_os = "cuda")'.dependencies]
rust-cuda = { path = "../../", features = ["derive"] }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rust-cuda = { path = "../../", features = ["derive", "host"] }
